[gd_scene load_steps=20 format=3 uid="uid://ckq7alkmxm7fp"]

[ext_resource type="Script" uid="uid://bsgjibq1kgpu1" path="res://scripts/truck.gd" id="1_hy71t"]
[ext_resource type="PackedScene" uid="uid://u18ywghvoyrl" path="res://pause_menu_ui.tscn" id="2_bbc7h"]
[ext_resource type="AudioStream" uid="uid://kwql06l6bj5y" path="res://sounds/effect/truck-engine-sound.mp3" id="2_svas2"]
[ext_resource type="PackedScene" uid="uid://umep5enn3vt7" path="res://model/Cars/cars.dae" id="2_w0wvx"]
[ext_resource type="Script" uid="uid://b0ywi7cp6wrum" path="res://scripts/game_manager.gd" id="3_jctl8"]
[ext_resource type="AudioStream" uid="uid://u1cdgjus3sbe" path="res://sounds/radio/Late-at-Night(chosic.com).mp3" id="5_svas2"]
[ext_resource type="MeshLibrary" uid="uid://bnhx3us1pnrv0" path="res://model/City/my_city_library.meshlib" id="7_vk80v"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jctl8"]
size = Vector3(3.11612, 3.10546, 10.6535)

[sub_resource type="BoxMesh" id="BoxMesh_jctl8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wtx0a"]
albedo_color = Color(0.403922, 1, 0.121569, 0.32549)

[sub_resource type="BoxMesh" id="BoxMesh_svas2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w0wvx"]
albedo_color = Color(1, 0.12549, 0.0509804, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_vk80v"]
radius = 8.26034

[sub_resource type="BoxMesh" id="BoxMesh_wtx0a"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_svas2"]
albedo_color = Color(0.137255, 0.164706, 1, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_x86kw"]
radius = 3.24282

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_vk80v"]

[sub_resource type="Sky" id="Sky_x86kw"]
sky_material = SubResource("ProceduralSkyMaterial_vk80v")

[sub_resource type="Environment" id="Environment_6snoo"]
background_mode = 2
sky = SubResource("Sky_x86kw")

[node name="PlayScrene" type="Node3D"]

[node name="Truck" type="VehicleBody3D" parent="."]
transform = Transform3D(0.555309, 0, 0, 0, 0.468682, 0, 0, 0, 0.421814, 0, 2.56876, 4.73368)
script = ExtResource("1_hy71t")

[node name="cars" parent="Truck" instance=ExtResource("2_w0wvx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.088501, -0.286223, 2.53989)

[node name="Truck" parent="Truck/cars" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.255775, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Truck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.036272, 1.25662, -1.17161)
shape = SubResource("BoxShape3D_jctl8")

[node name="FrontLeftWheel" type="VehicleWheel3D" parent="Truck"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -1.27895, -0.287101, -4.78098)
use_as_steering = true

[node name="FrontRightWheel" type="VehicleWheel3D" parent="Truck"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.990301, -0.175771, -4.8381)
use_as_steering = true

[node name="BackLeftWheel" type="VehicleWheel3D" parent="Truck"]
transform = Transform3D(-0.99349, 0.0226475, 0.111652, 0.00932371, 0.992918, -0.118431, -0.113544, -0.116619, -0.986665, -1.24936, -0.301452, 2.63605)
use_as_traction = true

[node name="BackRightWheel" type="VehicleWheel3D" parent="Truck"]
transform = Transform3D(-0.999997, 0, 0.00232118, 0, 1, 0, -0.00232118, 0, -0.999997, 1.03506, -0.2689, 2.58484)
use_as_traction = true

[node name="SpringArm3D" type="SpringArm3D" parent="Truck"]
transform = Transform3D(1, 0, 0, 0, -0.983106, -0.183042, 0, 0.183042, -0.983106, 0, 4.53417, 4.37478)

[node name="ThirdPersonCamera" type="Camera3D" parent="Truck/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, -0.99554, -0.094334, 0, 0.094334, -0.99554, -0.116566, -1.97855, -1.53182)
current = true

[node name="FirstPersonCamera" type="Camera3D" parent="Truck"]
transform = Transform3D(1, 0, 0, 0, 0.914614, 0.404328, 0, -0.404328, 0.914614, -0.661247, 1.72598, -6.22298)

[node name="EngineSound" type="AudioStreamPlayer3D" parent="Truck"]
stream = ExtResource("2_svas2")
autoplay = true

[node name="PauseMenuUI" parent="." instance=ExtResource("2_bbc7h")]

[node name="WereHouse_A" type="MeshInstance3D" parent="."]
transform = Transform3D(2.36933, 0, 0, 0, 2.39635, 0, 0, 0, 1.6971, 16.485, 4.82739, 0)
mesh = SubResource("BoxMesh_jctl8")
surface_material_override/0 = SubResource("StandardMaterial3D_wtx0a")

[node name="WereHouse_B" type="MeshInstance3D" parent="."]
transform = Transform3D(1.61498, 0, 0, 0, 1.46015, 0, 0, 0, 1.755, -50.9608, 1.74468, -142.179)
mesh = SubResource("BoxMesh_svas2")
surface_material_override/0 = SubResource("StandardMaterial3D_w0wvx")

[node name="Area3D" type="Area3D" parent="WereHouse_B"]
transform = Transform3D(1.34753, 0, 0, 0, 1.12621, 0, 0, 0, 1.08174, -0.225693, 0.0840755, 0.0389233)

[node name="CollisionShape3D" type="CollisionShape3D" parent="WereHouse_B/Area3D"]
transform = Transform3D(1.08899, 0, 0, 0, 1.13322, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("SphereShape3D_vk80v")

[node name="Factory_C" type="MeshInstance3D" parent="."]
transform = Transform3D(2.21183, 0, -2.42575, 0, 1.7777, 0, 2.93392, 0, 1.82873, 95.9958, 5.88264, -17.2369)
mesh = SubResource("BoxMesh_wtx0a")
surface_material_override/0 = SubResource("StandardMaterial3D_svas2")

[node name="Area3D" type="Area3D" parent="Factory_C"]
transform = Transform3D(1.44942, 0, 0, 0, 1.84024, 0, 7.15256e-07, 0, 1.5347, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Factory_C/Area3D"]
transform = Transform3D(1, 0, -7.15256e-07, 0, 1, 0, 1.49012e-06, 0, 1, -0.00707817, 0, 1.90735e-06)
shape = SubResource("SphereShape3D_x86kw")

[node name="Sky" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6snoo")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.596351, 0.802724, 0, -0.802724, 0.596351, -13.8897, 31.9305, 16.6993)
shadow_enabled = true

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("objective_label", "radio_player", "tutorial_label")]
script = ExtResource("3_jctl8")
objective_label = NodePath("../CanvasLayer/Label")
radio_player = NodePath("../RadioMusicPlayer")
tutorial_label = NodePath("../CanvasLayer/TutorialLabel")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 291.0
offset_bottom = 86.0

[node name="CheckBox" type="CheckBox" parent="CanvasLayer"]
offset_left = 1070.0
offset_top = -1.0
offset_right = 1150.0
offset_bottom = 56.0
button_pressed = true
text = "Радіо"

[node name="TutorialLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 30
text = "Натисніть [W], щоб почати рух"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RadioMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_svas2")
autoplay = true

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("7_vk80v")
cell_scale = 10.0
data = {
"cells": PackedInt32Array(0, 1, 1441792, 10, 1, 655364, 0, 65528, 655391, 0, 65519, 655393, 0, 65511, 655391, 0, 65502, 655391, 0, 65493, 29, 10, 65493, 1048607, 65526, 65519, 1048607, 65517, 65519, 1048607, 65507, 65519, 1048607, 65497, 65519, 1048607, 65487, 65519, 1048604, 65487, 65509, 31, 65487, 65499, 31, 65487, 65489, 31, 65487, 65498, 32, 65487, 65479, 30, 65497, 65479, 1441823, 65507, 65479, 1441823, 65517, 65479, 655388, 65517, 65469, 31, 65517, 65459, 31, 65517, 65449, 1441820, 65507, 65449, 1441823, 65497, 65449, 1441823, 65487, 65449, 1441825, 65487, 65459, 655391, 65487, 65469, 655391, 65477, 65449, 1048607, 65467, 65449, 1048607, 65457, 65449, 1048607, 65447, 65449, 1048607, 65437, 65449, 1048607, 20, 65493, 1441823, 30, 65493, 1441823, 39, 65493, 1441825, 49, 65493, 655388, 39, 65503, 655391, 39, 65513, 655391, 39, 65523, 655391, 39, 65533, 655360, 65478, 65479, 1179679, 65477, 65479, 1048607, 65467, 65479, 1048607, 65457, 65479, 1048607, 65447, 65479, 1048607, 65437, 65479, 1048607, 65427, 65479, 1048604, 65427, 65449, 33, 65427, 65469, 31, 65427, 65459, 31, 65427, 65439, 31, 65427, 65429, 31, 65427, 65419, 31, 65427, 65409, 28, 65437, 65409, 1441823, 65447, 65409, 1441823, 65457, 65409, 1441823, 65467, 65409, 1441823, 65477, 65409, 1441823, 65487, 65409, 1441823, 65497, 65409, 1441823, 65507, 65409, 1441823, 65517, 65409, 1441823, 65527, 65409, 1441823, 1, 65409, 1441823, 11, 65409, 1441820, 11, 65419, 655391, 11, 65429, 655391, 11, 65439, 655391, 11, 65449, 655391, 11, 65459, 655391, 11, 65469, 1048604, 21, 65469, 1048607, 31, 65469, 1048607, 49, 65483, 31, 39, 65469, 1441823, 49, 65479, 655391, 49, 65469, 1441820, 65507, 65469, 1048592, 65507, 65459, 1048592, 65497, 65459, 0, 65497, 65469, 0, 49, 65527, 1441800, 39, 7, 655368, 49, 0, 1441792, 49, 10, 1441792, 29, 7, 1048576, 29, 65533, 1048576, 49, 65517, 0, 49, 65507, 1441810, 49, 65503, 1441792, 58, 65503, 1048576, 59, 65493, 1441796, 59, 65483, 1441796, 59, 65473, 1441802, 29, 65503, 1048576, 29, 65513, 655364, 29, 65523, 1048576, 19, 65503, 655374, 10, 65503, 1048576, 10, 65513, 1441806, 10, 65523, 1441806, 10, 65530, 1048576, 19, 65531, 1048576, 20, 65522, 0, 20, 3, 0, 20, 65513, 0, 65526, 65529, 655364, 65516, 65529, 655366, 65507, 65529, 655370, 65498, 65529, 655370, 65488, 65529, 655372, 65477, 65519, 1048580, 65478, 65529, 1048576, 65477, 65509, 1048582, 65477, 65499, 1048582, 65477, 65489, 1048582, 65467, 65489, 655364, 65457, 65489, 655364, 65447, 65489, 655378, 65437, 65489, 655378, 65427, 65489, 655360, 65427, 65499, 655364, 65437, 65498, 1048576, 65437, 65469, 1048576, 65437, 65459, 1048576, 65447, 65459, 1441792, 65447, 65469, 1441792, 65457, 65469, 1441792, 65457, 65459, 1441792, 65467, 65459, 1441792, 65467, 65469, 1441792, 65477, 65469, 1441792, 65477, 65459, 1441792, 65526, 65509, 1048590, 65526, 65499, 1048590, 65526, 65489, 1048590, 0, 65483, 14, 10, 65483, 10, 20, 65483, 10, 30, 65483, 4, 39, 65483, 4, 39, 65479, 0, 29, 65479, 0, 19, 65479, 0, 10, 65479, 1441792, 65526, 2, 1441792, 65516, 65509, 4, 65506, 65509, 4, 65497, 65509, 4, 65497, 65499, 1441804, 65497, 65489, 1441804, 65507, 65489, 655372, 65517, 65489, 655372, 65517, 65499, 655360, 65507, 65499, 655360, 1, 65470, 1048582, 1, 65460, 1048582, 1, 65450, 1048582, 1, 65440, 1048580, 1, 65431, 1048580, 1, 65422, 1048580, 1, 65419, 0, 65527, 65419, 655378, 65517, 65419, 655378, 65507, 65419, 655378, 65497, 65419, 655378, 65487, 65419, 655366, 65477, 65419, 655366, 65467, 65419, 655366, 65457, 65419, 655366, 65447, 65419, 655364, 65437, 65419, 655364, 65437, 65429, 1441796, 65437, 65439, 1441796, 65447, 65439, 10, 65457, 65439, 10, 65467, 65439, 10, 65477, 65439, 10, 65487, 65439, 10, 65497, 65439, 10, 65507, 65439, 10, 65517, 65439, 4, 65527, 65448, 1441810, 65527, 65458, 1441810, 65527, 65468, 1441810, 65527, 65478, 1441810, 65526, 65481, 131072, 65417, 65479, 1048580, 65417, 65469, 1048580, 65417, 65459, 1048580, 65417, 65449, 1048580, 65417, 65439, 1048582, 65417, 65429, 1048582, 65417, 65419, 1048582, 65417, 65409, 1048582, 65426, 65399, 6, 65436, 65399, 6, 65446, 65399, 6, 65456, 65399, 6, 65466, 65399, 6, 65476, 65399, 6, 65486, 65399, 10, 65496, 65399, 10, 65506, 65399, 10, 65516, 65399, 12, 65526, 65399, 12, 0, 65399, 12, 10, 65399, 12, 21, 65409, 1441806, 21, 65419, 1441806, 21, 65429, 1441806, 20, 65399, 1441792, 29, 65397, 1441792, 21, 65389, 1441792, 29, 65389, 1441792, 21, 65439, 1441810, 21, 65449, 1441810, 21, 65459, 1441810, 31, 65459, 6, 41, 65459, 6, 51, 65459, 6, 59, 65465, 1048576, 60, 65456, 1048576, 68, 65465, 1048576, 70, 65455, 1048576, 78, 65465, 1048576, 80, 65455, 1048576, 80, 65447, 1048576, 80, 65446, 1048576, 73, 65446, 1048576, 69, 65448, 1048576, 64, 65449, 1048576)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[connection signal="body_entered" from="WereHouse_B/Area3D" to="GameManager" method="_on_warehouse_b_reached"]
[connection signal="body_entered" from="Factory_C/Area3D" to="GameManager" method="_on_factory_c_reached"]
[connection signal="toggled" from="CanvasLayer/CheckBox" to="GameManager" method="_on_check_box_toggled"]

[editable path="Truck/cars"]
